<resources>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="login_using_your_email_address">Login using your email address</string>
    <string name="email_address">Email Address</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sign_up_using_your_email_address">Sign Up using your email address</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Tv Series</string>
    <string name="more">More</string>
    <string name="movie">Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Series</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found</string>
    <string name="cast_n_crew">Cast and Crew</string>
    <string name="signin">Signin</string>
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="save">Save</string>
    <string name="director">Director :</string>
    <string name="comments">Comments</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="copyright">Copyright</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="play_now">Play Now</string>
    <string name="go_premium">Go Premium</string>
    <string name="premium">Premium</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">LIVE</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">More Like This</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="long_text">Aliquam eu mauris lectus. Pellentesque lacinia ut urna ut gravida. Proin libero sem, auctor in posuere sit amet</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="login_first">You need to login first</string>
    <string name="comment_empty">Comment can not empty</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="explore_by_genre">Explore By Genre</string>
    <string name="explore_by_country">Explore By Country</string>
    <string name="share_this_app">Share This App</string>
    <string name="connect_to_tv">Connect to TV</string>
    <string name="share_body">I would like to share this TV &amp; Movie App.  Here you can download this from playstore :\n    https://play.google.com/store/apps/details?id=</string>
    <string name="term_of_services">Term of Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account_deactivate_info"><![CDATA[Your account will be deactivate & only admin can activate again.]]></string>
    <string name="regular_program">Regular Program</string>
    <string name="international">International</string>
    <string name="server">Server</string>
    <string name="dummy_name">Jhon Doe</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="push_notification">Push Notification</string>
    <string name="others">OTHERS</string>
    <string name="no_data_found">No data found.</string>
    <string name="no_more_data_found">No more data found.</string>
    <string name="no_subscription_history">No subscription history found.</string>
    <string name="plan">Plan</string>
    <string name="no_active_subscription_found">No active subscription found.</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="p_date">P.Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="action">Action</string>
    <string name="status">Status</string>
    <string name="by_tapping_the_button_you_agree_to_oxxo_term_amp_condition_and_privacy_policy"><![CDATA[By tapping the button, you agree to Oxxo Term & Condition and Privacy Policy.]]></string>
    <string name="paid_content">You are trying to watch a paid content. Please subscribe a plan first.</string>
    <string name="subscription_required">Subscription Required</string>
    <string name="subscribe_text">Subscribe</string>
    <string name="payment_success">Payment Success.</string>
    <string name="invalid_card">Invalid card</string>
    <string name="subscribe_error">To subscribe a plan, you have to login first.</string>
    <string name="something_went_text">Something went wrong, try again or contact to your developer.</string>
    <string name="go_back">Go Back</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_number">Card Number</string>
    <string name="downloading">Downloading</string>
    <string name="download_completed">Download Completed</string>
    <string name="watch_now">Watch Now</string>
    <string name="season_Episode">  Season And Episode </string>
    <string name="download">Download</string>
    <string name="select_server">Select Server</string>
    <string name="home">Home</string>
    <string name="buy_any_subscription_below_and_enjoy_oxoo_prime">Buy any subscription below and enjoy Namme Star prime features.</string>
    <string name="all_tv_channels">TV Channels</string>
    <string name="all_kids_videos">All Kids Videos</string>
    <string name="all_tv_series">All TV Series</string>
    <string name="unlimited_movies">Unlimited Movies</string>
    <string name="please_select_your_payment_method">Please select your payment method</string>
    <string name="download_appear_text">Your download item will be appear here.  Download item not found.</string>
    <string name="send">Send</string>
    <string name="searcError_message">Title And Type can\'t be empty</string>
    <string name="external_download_links">External Download Links:</string>
    <string name="rating">Rating</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_fav">Add to favourite</string>
    <string name="remove_from_fav">Remove from Favorite</string>
    <string name="enter_your_activation_code">Enter your activation code</string>
    <string name="enter_code">Enter code here</string>
    <string name="get_activation_code_following">Follow bellow steps to get code:</string>
    <string name="instruction_2">2. Then go to Settings.</string>
    <string name="instruction_3">3. Then click on "Connect To TV."</string>
    <string name="signout">LogOut</string>
    <string name="connect">Connect</string>
    <string name="user_name">User Name:</string>
    <string name="emailTv">Email:</string>
    <string name="expire_date">Expire date:</string>
    <string name="signed_in_as">Profile</string>
    <string name="connecting">Connecting…</string>
    <string name="active_plan">Active Plan:</string>
    <string name="dialog_instruction_1">1. Purchase a plan from your phone/website.</string>
    <string name="dialog_instruction_2">2. Close this app. </string>
    <string name="dialog_instruction_3">3. Reopen this app. </string>
    <string name="continue_browsing">Continue browsing</string>
    <string name="enter_below_code_on_your_tv">Enter below code on your TV</string>
    <string name="all_radio_channels">All Radio Channels</string>
    <string name="listening_on">Listening on</string>
    <string name="type_keyword">Type keyword</string>
    <string name="year_range">Year Range</string>
    <string name="cancel">Cancel</string>
    <string name="tv_category">TV Category</string>
    <string name="name">Name</string>
    <string name="all_countries">All Countries</string>
    <string name="all_categories">All Categories</string>
    <string name="external_download">External Download</string>
    <string name="inApp_download">In App Download</string>
    <string name="select_download_server">Select Download Server</string>
    <string name="all_genres">All Genres</string>
    <string name="no_subtitle_found">No subtitles found for this video.</string>
    <string name="select_subtitle">Select Subtitle</string>
    <string name="no_other_server_found">No other server found</string>
    <string name="embed_not_supported">Embed file is not supported.</string>
    <string name="now_playing_channel_description">Shows what music is currently playing</string>
    <string name="now_playing_channel_name">Now Playing</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="image_description">Image Description</string>
    <string name="close">Close</string>
    <string name="movie_title">The Falcon And The Winter Soldier</string>
    <string name="poster">Poster</string>
    <string name="application_close_msg">Click exit to close the application</string>
    <string name="exit">Exit</string>
    <string name="playback_tag">PLAYBACK_TAG</string>
    <string name="pay_and_watch">Pay And Watch</string>
    <string name="hint_watch_trailer">Watch Trailer</string>
    <string name="hint_image">Image</string>
    <string name="add_watchlist">  Add to Watchlist </string>
    <string name="add_favlist">  Add to Favorite </string>
    <string name="hint_auto_resolution_error">This video is not supported to your device</string>
    <string name="hint_auto">Auto</string>
    <string name="window_Height">windowHeight</string>
    <string name="hint_default">Default</string>
    <string name="_144p">144p</string>
    <string name="_240p">240p</string>
    <string name="_360p">360p</string>
    <string name="_480p">480p</string>
    <string name="_720p">720p</string>
    <string name="_1080p">1080P</string>
    <string name="_1440p">1440p</string>
    <string name="_2160p">2160p</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="daily_movie">Daily movie</string>
    <string name="Welcome_login_chooser">Welcome to UVTV</string>
    <string name="login_with_email">Login with Email</string>
    <string name="welcome_to_uvtv">Welcome to UVTV</string>
    <string name="contentDescription">ContentDescription</string>
    <string name="login_with_mobile_number">Login with Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="_91">India (+91)</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="country_code_default">+91</string>
    <string name="country_name_default">India</string>
    <string name="uvtv_state_name_default">Select State</string>
    <string name="enter_otp">Enter OTP</string>
</resources>