<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_soft"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:ctx=".tv.ui.fragments.MyAccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/signed_in_as"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:baselineAligned="false"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:keepScreenOn="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/emailTv"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/active_plan"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expire_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:keepScreenOn="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userEmailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/activePlanTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/expireDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_focus"
        android:text="@string/signout"
        android:textAllCaps="false" />

</LinearLayout>